--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,6 +14,8 @@
       media="(prefers-color-scheme: dark)"
     />
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap" rel="stylesheet" />
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.8.10/tailwind.min.css'>
+    
     <link rel="stylesheet" href="../css/main.css" />
     <title>Bank Hamara</title>
     <!--load all html content first then fetch js then trigger domcontentloaded //its a good approach to make page faster -->
