added password in open account

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -469,6 +469,8 @@
             <input type="text" class="form-control" id="floatingInput" value="{{this.username}}" placeholder="Username" name="username" />
             <label>Contact number</label>
             <input type="text" class="form-control" id="floatingInput" value="{{this.contact_no}}" placeholder="Contact Number" name="contact_no"/>
+            <label>Password</label>
+            <input type="password" class="form-control" id="floatingInput" value="{{this.password}}" placeholder="Password" name="password"/>
               <div class="col-12 d-grid">
     <button class="btn btn-primary" type="submit">Submit</button>
   </div>
