--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,11 +2,12 @@
 		<input type="checkbox" id="chk" aria-hidden="true">
 
 			<div class="signup">
-				<form>
-					<label for="chk" aria-hidden="true">Sign up</label>
-					<input type="text" name="txt" placeholder="User name" required="">
-					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="pswd" placeholder="Password" required="">
+				<form method="POST" action="/register" novalidate>
+					<label for="chk" class="display" aria-hidden="true">Sign up</label>
+					<input type="text" id="floatingInput" value="{{this.name}}" name="name" placeholder="Name" required="">
+                    <input type="text" name="contact_no" id="floatingInput" value="{{this.contact_no}}" placeholder="Contact Number" required="">
+					<input type="text" name="username" id="floatingInput" value="{{this.username}}" placeholder="Username" required="">
+					<input type="password" name="password" id="floatingInput" value="{{this.password}}" placeholder="Password" required="">
 					<button type="submit">Sign up</button>
 				</form>
 			</div>
@@ -19,9 +20,17 @@
 					<button type="submit">Login</button>
 				</form>
 			</div>
+
+
+
 	</div>
 
   <div>
     <img src="img/new_logo.png" alt="Logo" width="300" height="300" id="logo-login">
     <h3 id="text-logo">The Bank you deserve</h3>
+                        {{#if alert}}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  {{alert}}
+</div>
+{{/if}}
   </div>
