--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -142,7 +142,7 @@
                             </div>
                             <div class="ccCardHolder">
                                 <label>CARD HOLDER</label>
-                                <span>Lara Page</span>
+                                <span>{{ user.name }}</span>
                             </div>
                         </div>
                     </section>
@@ -153,7 +153,7 @@
                             <div>
                                 <h3 class="title" id="chart1-title" style="line-height: 2.5em; font-size: 1.1em;">
                                     Balance</h3>
-                                <h3 class="title" id="chart1-title2">$2,03,050</h3>
+                                <h3 class="title" id="chart1-title2">${{ user.Balance }}</h3>
                             </div>
                             <div style="margin-left: 2em;">
                                 <h3 class="title" id="chart1-title" style="line-height: 2.5em; font-size: 1.1em;">
