--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -18,7 +18,7 @@
                 </a>
             </li> -->
             <li>
-                <a href="dashboard.html">
+                <a href="dashboard?username={{user.username}}">
                     <i class="fa fa-sign-out-alt fa-2x"></i>
                 </a>
             </li>
