--- a/views/support.hbs
+++ b/views/support.hbs
@@ -13,7 +13,7 @@
             <nav class="font-semibold text-gray-600 my-12">
                 <ul class="space-y-3">
                     <li>
-                        <a href="dashboard.html"
+                        <a href="dashboard?username={{user.username}}"
                             class="flex items-center px-8 py-3 bg-gradient-to-r hover:from-purple-200 hover:text-purple-600">
                             <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 mr-5">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -23,7 +23,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="cards.html"
+                        <a href="cards?username={{user.username}}"
                             class="flex items-center px-8 py-3 bg-gradient-to-r hover:from-purple-200 hover:text-purple-600">
                             <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 mr-5">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -33,7 +33,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="subscriptions.html"
+                        <a href="subscriptions?username={{user.username}}"
                             class="flex items-center px-8 py-3 bg-gradient-to-r hover:from-purple-200 hover:text-purple-600">
                             <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 mr-5">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -43,7 +43,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="transaction.html"
+                        <a href="transaction?username={{user.username}}"
                             class="flex items-center px-8 py-3 bg-gradient-to-r hover:from-purple-200 hover:text-purple-600">
                             <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 mr-5">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -53,7 +53,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="loans.html"
+                        <a href="loans?username={{user.username}}"
                             class="flex items-center px-8 py-3 bg-gradient-to-r hover:from-purple-200 hover:text-purple-600">
                             <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5 mr-5">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
