updated profile error in loans

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -112,15 +112,15 @@
                     <div class="menu">
                         <ul>
                             <li>
-                                <img src="img/dashboard/user.png" /><a href="profile">My profile</a>
+                                <img src="img/dashboard/user.png" /><a href="profile?username={{user.username}}">My profile</a>
                             </li>
                             <li>
-                                <img src="img/dashboard/edit.png" /><a href="profile">Edit profile</a>
+                                <img src="img/dashboard/edit.png" /><a href="profile?username={{user.username}}">Edit profile</a>
                             </li>
                             <li>
                                 <img src="img/dashboard/envelope.png" /><a href="#">Inbox</a>
                             </li>
-                            <li><img src="img/dashboard/question.png" /><a href="support">Help</a></li>
+                            <li><img src="img/dashboard/question.png" /><a href="support?username={{user.username}}">Help</a></li>
                             <li>
                                 <img src="img/dashboard/log-out.png" /><a href="login">Logout</a>
                             </li>
