--- a/views/layouts/loanslayout.hbs
+++ b/views/layouts/loanslayout.hbs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Account | Subscriptions</title>
+    <title>Account | Loans</title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.8.10/tailwind.min.css'>
     <link rel="stylesheet" href="css/loans.css">
 </head>
