--- a/views/loans.hbs
+++ b/views/loans.hbs
@@ -104,7 +104,7 @@
                 </div>
             </header>
             <div class="loan-cards" id="loan-cards">
-                <div class="book">
+                 <div class="book" onclick="BookToggle1()">
                     <div id="cover-inside">
                         <h1>Loan Details</h1>
                         <ul>
@@ -130,11 +130,11 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="cover">
+                    <div class="cover1">
                         <p>Loan ID: {{ user.loanID1 }}</p>
                     </div>
                 </div>
-                <div class="book">
+                <div class="book" onclick="BookToggle2()">
                     <div id="cover-inside">
                         <h1>Loan Details</h1>
                         <ul>
@@ -160,10 +160,23 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="cover">
+                    <div class="cover2">
                         <p>Loan ID: {{ user.loanID2 }}</p>
                     </div>
                 </div>
             </div>
         </div>
         <!-- partial -->
+
+        <script>
+            function BookToggle1() {
+                const toggleNMenu = document.querySelector(".cover1");
+                toggleNMenu.classList.toggle("active");
+            }
+        </script>
+        <script>
+            function BookToggle2() {
+                const toggleNMenu = document.querySelector(".cover2");
+                toggleNMenu.classList.toggle("active");
+            }
+        </script>
