--- a/views/loans.hbs
+++ b/views/loans.hbs
@@ -165,6 +165,12 @@
                     </div>
                 </div>
             </div>
+             <div class="Noted">
+                <span id="Note">Note:</span>
+                <span>To apply for new loan, kindly visit to your nearest branch or</span>
+                <span id="Note-text" onclick="sendsupport()">contact support</span>
+                <span>.</span>
+            </div>
         </div>
         <!-- partial -->
 
@@ -178,5 +184,10 @@
             function BookToggle2() {
                 const toggleNMenu = document.querySelector(".cover2");
                 toggleNMenu.classList.toggle("active");
+            }
+        </script>
+        <script>
+            function sendsupport() {
+                window.location.href = '/support?username={{user.username}}';
             }
         </script>
