--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -96,7 +96,7 @@
             <main>
                 <div class="ml-auto flex items-center space-x-3">
                     <h1>Overview</h1>
-                    <button style="margin-left: 60%;"
+                    <button style="margin-left: 60%;" onclick="Notification_menuToggle();"
                         class="p-2 text-gray-600 relative bg-white rounded-full shadow hover:bg-gray-100 hover:text-gray-700">
                         <span class="absolute top-0 right-0 h-3 w-3 bg-red-500 rounded-full mt-1 mr-2"></span>
                         <span
@@ -105,9 +105,24 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
                         </svg>
+                        <div class="Notification_menu">
+                            <ul>
+                                <li>
+                                    <img src="img/dashboard/dot.jpg" /><a href="transaction?username={{user.username}}">Your recent transaction at American Eagle $39.99</a>
+                                </li>
+                                <li>
+                                    <img src="img/dashboard/dot.jpg" /><a href="">Monthly Statement mailed</a>
+                                </li>
+                                <li><img src="img/dashboard/dot.jpg" /><a href="transaction?username={{user.username}}">Your received $50 from Harvard</a></li>
+                                <li>
+                                    <img src="img/dashboard/dot.jpg" /><a href="transaction?username={{user.username}}">Your recent transaction at Starbucks $50</a>
+                                </li>
+                            </ul>
+                        </div>
                     </button>
                     <button class="h-10 w-10 bg-gray-200 border shadow rounded-full overflow-hidden" onclick="menuToggle();">
                         <img style="background-color: #000;" src="img\user4.png" class="h-full w-full object-cover" />
+                        <div class="menu">
                     </button>
                     <div class="menu">
                         <ul>
@@ -189,8 +204,16 @@
     }
 </script>
     <script>
+        function Notification_menuToggle() {
+            const toggleNMenu = document.querySelector(".Notification_menu");
+            toggleNMenu.classList.toggle("active");
+        }
+    </script>
+    <script>
         function menuToggle() {
             const toggleMenu = document.querySelector(".menu");
             toggleMenu.classList.toggle("active");
+            const toggleNMenu = document.querySelector(".Notification_menu");
+            toggleNMenu.classList.toggle("inactive");
         }
     </script>
