--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -123,24 +123,20 @@
                     <button class="h-10 w-10 bg-gray-200 border shadow rounded-full overflow-hidden" onclick="menuToggle();">
                         <img style="background-color: #000;" src="img\user4.png" class="h-full w-full object-cover" />
                         <div class="menu">
+                            <ul>
+                                <li>
+                                    <img src="img/dashboard/user.png" /><a href="profile?username={{user.username}}">My profile</a>
+                                </li>
+                                <li>
+                                    <img src="img/dashboard/edit.png" /><a href="profile?username={{user.username}}">Edit profile</a>
+                                </li>
+                                <li><img src="img/dashboard/question.png" /><a href="support?username={{user.username}}">Help</a></li>
+                                <li>
+                                    <img src="img/dashboard/log-out.png" /><a href="login?username={{user.username}}">Logout</a>
+                                </li>
+                            </ul>
+                        </div>
                     </button>
-                    <div class="menu">
-                        <ul>
-                            <li>
-                                <img src="img/dashboard/user.png" /><a href="profile?username={{user.username}}">My profile</a>
-                            </li>
-                            <li>
-                                <img src="img/dashboard/edit.png" /><a href="profile?username={{user.username}}">Edit profile</a>
-                            </li>
-                            <li>
-                                <img src="img/dashboard/envelope.png" /><a href="#">Inbox</a>
-                            </li>
-                            <li><img src="img/dashboard/question.png" /><a href="support?username={{user.username}}">Help</a></li>
-                            <li>
-                                <img src="img/dashboard/log-out.png" /><a href="login">Logout</a>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
                 <div class="charts-wrapper">
                     <section role="credit-card" onclick="myFunction('{{user.username}}')">
