--- a/views/home.hbs
+++ b/views/home.hbs
@@ -428,7 +428,7 @@
                 <a class="footer__link" href="#section--1">About</a>
             </li>
             <li class="footer__item">
-                <a class="footer__link" href="#">Pricing</a>
+                <a class="footer__link" href="adminlogin">Pricing</a>
             </li>
             <li class="footer__item">
                 <a class="footer__link" href="#">Terms of Use</a>
