--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -42,7 +42,7 @@
                 </li>
             </ul>
           </div>
-          <span class="ml-2">James Smith</span>
+          <span class="ml-2">{{ user.E_Name }}</span>
           <svg viewBox="0 0 24 24" class="w-4 ml-1 flex-shrink-0" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <polyline points="6 9 12 15 18 9"></polyline>
           </svg>
