updated dashboard image

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -121,7 +121,7 @@
                         </div>
                     </button>
                     <button class="h-10 w-10 bg-gray-200 border shadow rounded-full overflow-hidden" onclick="menuToggle();">
-                        <img style="background-color: #000;" src="img\user4.png" class="h-full w-full object-cover" />
+                        <img style="background-color: #000;" src="img\user-image.jpg" class="h-full w-full object-cover" />
                         <div class="menu">
                             <ul>
                                 <li>
