--- a/views/home.hbs
+++ b/views/home.hbs
@@ -283,7 +283,7 @@
                         I have been using this banking website for a few months now and I must say that it has exceeded my expectations. The customer support team is extremely helpful and responsive and they have helped me resolve any issues I faced while using the website.
                     </blockquote>
                     <address class="testimonial__author">
-                        <img src="../img/user4.png" alt="" class="testimonial__photo" />
+                        <img src="../img/user-image.jpg" alt="" class="testimonial__photo" />
                         <h6 class="testimonial__name">Lara Page</h6>
                         <p class="testimonial__location">Managing Director, Google</p>
                     </address>
