--- a/views/loans.hbs
+++ b/views/loans.hbs
@@ -97,7 +97,7 @@
                             </svg>
                         </button>
                         <button class="h-10 w-10 bg-gray-200 border shadow rounded-full overflow-hidden">
-                            <img style="background-color: #000;" src="img\user4.png"
+                            <img style="background-color: #000;" src="img\user-image.jpg"
                                 class="h-full w-full object-cover" />
                         </button>
                     </div>
