--- a/public/css/support.css
+++ b/public/css/support.css
@@ -12,6 +12,7 @@
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .05);
     --bg-opacity: 1;
     background-color: #fff;
+    /* text-decoration: none; */
     background-color: rgba(255, 255, 255, var(--bg-opacity))
 }
 
@@ -46,6 +47,7 @@
 
 .asid li a{
     padding: 12px 32px !important;
+    text-decoration: none;
 }
 
 .asid li a svg{
