--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -30,7 +30,7 @@
     <!-- Sidenav -->
     <div class="sidenav">
         <div class="profile">
-            <img src="img/user4.png" alt="" width="100" height="100">
+            <img src="img/user-image.jpg" alt="" width="100" height="100">
 
             <div class="name">
                 Lara Page
