--- a/views/support.hbs
+++ b/views/support.hbs
@@ -97,7 +97,7 @@
                             </svg>
                         </button>
                         <button class="h-10 w-10 bg-gray-200 border shadow rounded-full overflow-hidden">
-                            <img style="background-color: #000;" src="img\user4.png"
+                            <img style="background-color: #000;" src="img\user-image.jpg"
                                 class="h-full w-full object-cover" />
                         </button>
                     </div>
@@ -134,7 +134,7 @@
                   <select class="form-control" id="exampleFormControlSelect1">
                     <option>Account Related</option>
                     <option>Report Fraud Transactions</option>
-                    <option>Issue with a transaction</option>
+                    <option>Loan</option>
                     <option>Regarding Pro Account</option>
                     <option>Unknown Charges Deduction</option>
                     <option>Others</option>
