--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -128,7 +128,7 @@
                                     <img src="img/dashboard/user.png" /><a href="profile?username={{user.username}}">My profile</a>
                                 </li>
                                 <li>
-                                    <img src="img/dashboard/edit.png" /><a href="profile?username={{user.username}}">Edit profile</a>
+                                    <img src="img/dashboard/edit.png" /><a href="editprofile?username={{user.username}}">Edit profile</a>
                                 </li>
                                 <li><img src="img/dashboard/question.png" /><a href="support?username={{user.username}}">Help</a></li>
                                 <li>
