--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -33,10 +33,10 @@
             <img src="img/user-image.jpg" alt="" width="100" height="100">
 
             <div class="name">
-                Lara Page
+                {{user.name}}
             </div>
             <div class="job">
-                @larapage07
+                @{{user.username}}
             </div>
         </div>
 
@@ -46,7 +46,7 @@
                 <hr align="center">
             </div>
             <div class="url">
-                <a href="#settings">Settings</a>
+                <a href="editprofile?username={{user.username}}">Settings</a>
                 <hr align="center">
             </div>
         </div>
@@ -64,33 +64,34 @@
                         <tr>
                             <td>Name</td>
                             <td>:</td>
-                            <td>Lara Page</td>
+                            <td>{{user.name}}</td>
                         </tr>
                         <tr>
                             <td>Username</td>
                             <td>:</td>
-                            <td>larapage07</td>
+                            <td>{{user.username}}</td>
                         </tr>
                         <tr>
-                            <td>Email</td>
+                            <td>Contact No</td>
                             <td>:</td>
-                            <td>larapage@gmail.com</td>
+                            <td>{{user.contact_no}}</td>
                         </tr>
                         <tr>
                             <td>Address</td>
                             <td>:</td>
-                            <td>4-Square, New York, USA</td>
+                            <td> {{user.city}}, {{user.state}}, India</td>
+                        </tr>
+                        <tr>
+                            <td>Pin Code</td>
+                            <td>:</td>
+                            <td>{{user.pincode}}</td>
                         </tr>
                         <tr>
                             <td>Government ID</td>
                             <td>:</td>
-                            <td>Diving, Reading Book</td>
+                            <td>{{user.GovernmentID}}</td>
                         </tr>
-                        <tr>
-                            <td>Job</td>
-                            <td>:</td>
-                            <td>Managing Director, Google</td>
-                        </tr>
+                        
                     </tbody>
                 </table>
             </div>
