--- a/views/editprofile.hbs
+++ b/views/editprofile.hbs
@@ -21,10 +21,10 @@
             <img src="img/user-image.jpg" alt="" width="100" height="100">
 
             <div class="name">
-                Lara Page
+                {{user.name}}
             </div>
             <div class="job">
-                @larapage07
+                @{{user.username}}
             </div>
         </div>
 
@@ -41,82 +41,64 @@
 
     <!-- Main -->
     <div class="main">
-        <h2>IDENTITY</h2>
         <div class="card">
-            <div class="card-body">
-                <table>
-                    {{!-- <tbody>
-                        <tr>
-                            <td>Name</td>
-                            <td>:</td>
-                            <td id="name">Lara Page</td>
-                        </tr>
-                        <tr>
-                            <td>Username</td>
-                            <td>:</td>
-                            <td id="username">larapage07</td>
-                        </tr>
-                        <tr>
-                            <td>Email</td>
-                            <td>:</td>
-                            <td id="email">larapage@gmail.com</td>
-                            <i class="fa fa-pen fa-xs edit" id="edit2"></i>
-                        </tr>
-                        <tr>
-                            <td>Address</td>
-                            <td>:</td>
-                            <td id="address">4-Square, New York, USA</td>
-                            <i class="fa fa-pen fa-xs edit" id="edit3" ></i>
-                        </tr>
-                        <tr>
-                            <td>Government ID</td>
-                            <td>:</td>
-                            <td id="GID">DKEJDAK</td>
-                        </tr>
-                        <tr>
-                            <td>Job</td>
-                            <td>:</td>
-                            <td id="job">Managing Director, Google</td>
-                            <i class="fa fa-pen fa-xs edit" id="edit4" ></i>
-                        </tr>
-                    </tbody> --}}
-                    <tbody>
-                        <tr>
-                            <td>Name</td>
-                            <td>:</td>
-                            <td>{{user.name}}</td>
-                        </tr>
-                        <tr>
-                            <td>Username</td>
-                            <td>:</td>
-                            <td>{{user.username}}</td>
-                        </tr>
-                        <tr>
-                            <td>Contact No</td>
-                            <td>:</td>
-                            <td>{{user.contact_no}}</td>
-                        </tr>
-                        <tr>
-                            <td>Address</td>
-                            <td>:</td>
-                            <td> {{user.city}}, {{user.state}}, India</td>
-                        </tr>
-                        <tr>
-                            <td>Pin Code</td>
-                            <td>:</td>
-                            <td>{{user.pincode}}</td>
-                        </tr>
-                        <tr>
-                            <td>Government ID</td>
-                            <td>:</td>
-                            <td>{{user.GovernmentID}}</td>
-                        </tr>
-                        
-                    </tbody>
-                </table>
-                  <div class="col-12 d-grid">
-    <button class="btn btn-primary" type="submit">Submit</button>
-  </div>
+           <div class="card-body">
+  <form action="/editprofile?username={{user.username}}" method="POST">
+    <table>
+      <tbody>
+        <tr>
+          <td>Name</td>
+          <td>:</td>
+          <td><input type="text" id="floatingInput" name="name" value="{{user.name}}" /></td>
+        </tr>
+        <tr>
+          <td>Username</td>
+          <td>:</td>
+          <td><input type="text" id="floatingInput" name="username" value="{{user.username}}" readonly /></td>
+        </tr>
+        <tr>
+          <td>Contact No</td>
+          <td>:</td>
+          <td><input type="text" id="floatingInput" name="contact_no" value="{{user.contact_no}}" /></td>
+        </tr>
+        <tr>
+          <td>City</td>
+          <td>:</td>
+          <td><input type="text" id="floatingInput" name="city" value="{{user.city}}" /></td>
+        </tr>
+        <tr>
+          <td>State</td>
+          <td>:</td>
+          <td><input type="text" id="floatingInput" name="state" value="{{user.state}}" /></td>
+        </tr>
+        <tr>
+          <td>Pin Code</td>
+          <td>:</td>
+          <td><input type="text" name="pincode" value="{{user.pincode}}" /></td>
+        </tr>
+        <tr>
+  <td>Government ID</td>
+  <td>:</td>
+  <td><input type="text" name="GovernmentID" value="{{user.GovernmentID}}" /></td>
+</tr>
+
+      </tbody>
+    </table>
+    <div class="frame">
+      <button class="custom-btn btn-3" type="submit"><span>Submit</span></button>
+    </div>
+</form>
+
+</div>
+
+
+    {{#if alert}}
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  {{alert}}
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{{/if}}
+
             </div>
         </div>
     </div>
