--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,6 +6,7 @@
 					<label for="chk" class="display" aria-hidden="true">Sign up</label>
 					<input type="text" id="floatingInput" value="{{this.name}}" name="name" placeholder="Name" required="">
                     <input type="text" name="contact_no" id="floatingInput" value="{{this.contact_no}}" placeholder="Contact Number" required="">
+					<input type="text" name="pincode" id="floatingInput" value="{{this.pincode}}" placeholder="Pincode" required="">
 					<input type="text" name="username" id="floatingInput" value="{{this.username}}" placeholder="Username" required="">
 					<input type="password" name="password" id="floatingInput" value="{{this.password}}" placeholder="Password" required="">
 					<button type="submit">Sign up</button>
