--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -164,7 +164,7 @@
   <div id="charts-title">
     <div>
       <h3 class="title" id="chart1-title" style="line-height: 2.5em; font-size: 1.1em;">Balance</h3>
-      <h3 class="title" id="chart1-title2">${{formatNumber user.Balance}}</h3>
+      <h3 class="title" id="chart1-title2">${{formatNumber user.balance}}</h3>
     </div>
     <div style="margin-left: 2em;">
       <h3 class="title" id="chart1-title" style="line-height: 2.5em; font-size: 1.1em;">Investments</h3>
