--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,7 +17,7 @@
                     <a class="nav__link" href="#section--3">Reviews</a>
                 </li>
                 <li class="nav__item">
-                    <a class="nav__link nav__link--btn btn--show-modal" href="/adduser">Open account</a>
+                    <a class="nav__link nav__link--btn btn--show-modal" href="/login">Open account</a>
                     {{!-- <a href="/adduser" id="open-account">Open your free account today!</a> --}}
                 </li>
             </ul>
@@ -398,7 +398,7 @@
             </h3>
         </div>
         <button class="btn btn--show-modal">
-             <a href="/adduser" id="open-account">Open your free account today!</a>
+             <a href="/login" id="open-account">Open your free account today!</a>
              </button>
     </section>
 
