--- a/views/layouts/adminlayout.hbs
+++ b/views/layouts/adminlayout.hbs
@@ -2,7 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>User Details</title>
+  <title>Admin View</title>
+  <link rel="shortcut icon" type="image/png" href="img/bank_favicon.png" media="(prefers-color-scheme: light)"/>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/new_logo.png"
+      media="(prefers-color-scheme: dark)">
   <link href="https://assets.codepen.io/344846/style.css" rel="stylesheet">
   <link rel="stylesheet" href="css/admin.css">
 
