--- a/views/layouts/editprofilelayout.hbs
+++ b/views/layouts/editprofilelayout.hbs
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Page</title>
+    <title>Edit Profile</title>
 
     <!-- Custom Css -->
     <link rel="stylesheet" href="css/editprofile.css">
 
     <!-- FontAwesome 5 -->
+    <link rel="shortcut icon" type="image/png" href="img/bank_favicon.png" media="(prefers-color-scheme: light)"/>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/new_logo.png"
+      media="(prefers-color-scheme: dark)">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
