--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,25 +5,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="../img/bank_favicon.png" media="(prefers-color-scheme: light)"/>
+    <link rel="shortcut icon" type="image/png" href="img/bank_favicon.png" media="(prefers-color-scheme: light)"/>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../img/new_logo.png"
+      href="img/new_logo.png"
       media="(prefers-color-scheme: dark)"
     />
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap" rel="stylesheet" />
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.8.10/tailwind.min.css'>
-    
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Bank Hamara</title>
     <!--load all html content first then fetch js then trigger domcontentloaded //its a good approach to make page faster -->
-    <script defer src="../js/script.js"></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script defer src="./js/script.js"></script>
 
 </head>
 
 <body>
+
 {{{body}}}
+
+
 </body>
 </html>
